--- a/html/data.html
+++ b/html/data.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,7 +46,7 @@
 <body class="main-custom main-text">
 <!--Main Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-        <a class="navbar-brand" href="index.html">Latitude</a>
+        <a class="navbar-brand" href="\Web-Design-Challenge\index.html">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -58,24 +56,24 @@
           <ul class="navbar-nav ml-auto">
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Plots </a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Plots </a>
 
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
-              <a class="dropdown-item" href="html\temp.html">Max Temperature</a>
-              <a class="dropdown-item" href="html\humidity.html">Humidity</a>
-              <a class="dropdown-item" href="html\cloudiness.html">Cloudiness</a>
-              <a class="dropdown-item" href="html\wind.html">Wind Speed</a>
+              <a class="dropdown-item" href="\Web-Design-Challenge\html\temp.html">Max Temperature</a>
+              <a class="dropdown-item" href="\Web-Design-Challenge\html\humidity.html">Humidity</a>
+              <a class="dropdown-item" href="\Web-Design-Challenge\html\cloudiness.html">Cloudiness</a>
+              <a class="dropdown-item" href="\Web-Design-Challenge\html\wind.html">Wind Speed</a>
               
 
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="html\data.html">Data</a>
+              <a class="nav-link" href="\Web-Design-Challenge\html\data.html">Data</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="html\comparison.html">Comparisons</a>
+              <a class="nav-link" href="\Web-Design-Challenge\html\comparison.html">Comparisons</a>
             </li>
 
             
