--- a/html/humidity.html
+++ b/html/humidity.html
@@ -110,7 +110,8 @@
         <hr>
         <h3 class="main-text" style="text-align: center;">Visualizations</h3>
         <hr>
-        <div class="row">
+        <div class="container">
+        <div class="row m-3">
         <div class='col'>
           <a href = "\Web-Design-Challenge\html\temp.html">
             <img class="mr-3 img-fluid" src="\Web-Design-Challenge\Resources\assets\images\Fig1.png" alt="Generic placeholder image" style="width: auto; height: 250px;">
@@ -121,8 +122,9 @@
               <img class="mr-3 img-fluid" src="\Web-Design-Challenge\Resources\assets\images\Fig2.png"  alt="Generic placeholder image" style="width: auto; height: 250px;">
           </a>
         </div>
+      
         </div>
-        <div class='row'>
+        <div class='row m-3'>
           <div class='col'>
                   <a href = "\Web-Design-Challenge\html\cloudiness.html">
               <img class="mr-3 img-fluid" src="\Web-Design-Challenge\Resources\assets\images\Fig3.png"  alt="Generic placeholder image" style="width: auto; height: 250px;">
@@ -135,7 +137,7 @@
             </div>
                 </div>
             </div>
-            </div>
+            </div></div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
